--- a/trunk/src/ghostserver/ghost/templates/main_template.html
+++ b/trunk/src/ghostserver/ghost/templates/main_template.html
@@ -15,24 +15,39 @@
     {% endblock %}
     <div id="outer">
       <div id="header">
-        <div style="position:relative; width:25%; margin-top:-3em;float:left; margin-right:-20em;margin-left:5em;"><img src="{{ MEDIA_URL|safe }}media/logo.jpg"></div>
+        <div style="position:relative; width:25%; margin-top:-3em;float:left; margin-right:-30em;margin-left:8em;"><img src="{{ MEDIA_URL|safe }}media/logo.png"></div>
         <h1>Ghost Garbage</a></h1>
-        <h2>by Free CSS Templates</h2>
+        <h2>by Lodur and Woakas</h2>
       </div>
       
       <div id="menu">
         <ul>
-          <li class="first"><a href="#" accesskey="1" title="">Home</a></li>
-          <li><a href="#" accesskey="2" title="">About Us</a></li>
-          <li><a href="#" accesskey="3" title="">Products</a></li>
-          <li><a href="#" accesskey="4" title="">Services</a></li>
-          <li><a href="#" accesskey="5" title="">Contact Us</a></li>
+          {% for state, menu in menus %}
+          {% ifequal state "activo" %}
+          <li><a href="#" class="actual" title="">{{ menu.name }}</a></li>
+          {% else %}
+          <li><a href="/{{ menu.url }}" title="">{{ menu.name }}</a></li>
+          <a href=""></a>
+          {% endifequal %}
+          {% endfor %}
         </ul>
       </div>
       <div id="content">
         <div id="xbg1"></div>
         <div id="primaryContentContainer">
           <div id="primaryContent">
+            <span class="titletext">Ghost Garbage</span>
+	    {% if titlesection %}
+	    <br />
+	    <span class="titletext">{{ titlesection }}</span>
+	    {% endif %}
+	    <br />
+            {% block maininfo %}
+            
+            <strong>Ghost Garbage</strong><br />
+	    {% endblock %}
+            
+            {% comment %} 
             <h2>Welcome to Sitename.com!</h2>
             <p><strong>Burned</strong> is a free template from <a href="http://freecsstemplates.org/">Free CSS Templates</a> released under a <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 License</a>. You're free to use it for both commercial or personal use. I only ask that you link back to <a href="http://www.freecsstemplates.org/">my site</a> in some way. Enjoy :)</p>
             <p>Suspendisse potenti. Donec nulla est, laoreet quis, pellentesque in, congue in, dui. Nunc rhoncus placerat augue. Donec justo odio, eleifend varius, volutpat venenatis, sagittis ut, orci. Donec nulla est, laoreet quis, pellentesque in, congue in, dui. Nunc rhoncus placerat augue. Donec justo odio, eleifend varius, volutpat venenatis, sagittis ut, orci. Nullam et orci in erat viverra ornare. Nunc pellentesque.</p>
@@ -77,9 +92,11 @@
                 <td>Vivamus mi lectus gravida scelerisque, ultrices vitae cursus in neque.</td>
               </tr>
             </table>
+            {% endcomment %}
           </div>
         </div>
         <div id="secondaryContent">
+          {% comment %} 
           <h3>Etiam suscipit et</h3>
           <p>Rhoncus ac, lacinia, nisl. Aliquam gravida massa eu arcu. <a href="#">More&#8230;</a></p>
           <h3>Fusce dolor tristique</h3>
@@ -93,6 +110,7 @@
             <li><a href="#">Quis Gravida Massa</a></li>
             <li><a href="#">Inerat Viverra Ornare</a></li>
           </ul>
+          {% endcomment %}
         </div>
         <div class="clear"></div>
       </div>
