Implementación de cargas de datos iniciales apartir de csv y adición de ghost_lbs
git-svn-id: https://svn.ghost.webhop.org:8443@22 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/data/static/css/style-ghost.css
+++ b/trunk/data/static/css/style-ghost.css
@@ -36,6 +36,14 @@ a:hover
 {
     text-decoration: none;
 }
+input,
+textarea,
+select {
+  padding: 1px;
+  font: 400 1em verdana, sans-serif;
+  border: 1px solid #CCC;
+}
+
 
 /* Outer */
 
