Adición del template con la parte del login es importante que la dos vistas adicionadas la documentación, se ha modificado el template y el css para tener el contexto de varios tipos de página. Se debe evaluar no perder tanto espacio en la página lateralmente
git-svn-id: https://svn.ghost.webhop.org:8443@24 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/data/static/css/style-ghost.css
+++ b/trunk/data/static/css/style-ghost.css
@@ -232,22 +232,45 @@ select {
     width: 100%;
 }
 
-#primaryContent
+#primaryContentRight
 {
     margin: 2em 3.0em 0em 19em;
     padding: 0em 0em 0em 1.5em;
     border-left: solid 1px #DFBF99;
 }
 
+#primaryContentLeft
+{
+    margin: 2em 18em 0em 1em;
+    padding: 0em 0em 0em 1.5em;
+    border-right: solid 1px #DFBF99;
+}
+
+#primaryContent
+{
+    margin: 2em 3.0em 0em 1em;
+    padding: 0em 0em 0em 1.5em;
+}
+
 /* Secondary Content */
 
-#secondaryContent
+#secondaryContentLeft
 {
     position: relative;
     z-index: 2;
     float: right;
     width: 15em;
     margin-top: 2em;
+}
+
+#secondaryContentRight
+{
+    position: relative;
+    z-index: 2;
+    float: right;
+    width: 14em;
+    margin-top: 2em;
+    margin-right: 3em;
 }
 
 /* Footer */
