--- a/trunk/src/ghostserver/ghost/templates/index.html
+++ b/trunk/src/ghostserver/ghost/templates/index.html
@@ -1,11 +1,14 @@
 {% extends "main_template.html" %}
-{% block maininfo %}
+{% block primaryContentLeft %}
 <strong>Bienvenido a Ghost Garbage, favor ingrese su nombre y su usuario.</strong><br />
+<p>esto es un lindo mensaje de pureba</p>
+{% endblock %}
 
+{% block secondaryContentRight %}
 <form method="post">
-<table>
+
 {{ form }}
-<tr><td colspan="2"><input type="submit" value="Ingresar">
-</table>
+<input type="submit" value="Ingresar">
+
 </form>
 {% endblock %}
