Modificación y primer versión stable del aplicativo
git-svn-id: https://svn.ghost.webhop.org:8443@31 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/data/static/css/style-ghost.css
+++ b/trunk/data/static/css/style-ghost.css
@@ -288,3 +288,40 @@ select {
 {
     clear: both;
 }
+
+
+
+.submenu
+{
+
+    font-weight:bold;
+    text-align: right;
+    padding-top: 5.6em;
+    padding-right: 2.0em;
+
+}
+
+.submenu a{
+    /*font: 0.7em Tahoma, sans-serif;*/
+    font-size: 11px;
+    font-weight:bold;
+    color: #555050;
+    /*color:#604040;*/
+    text-decoration:none;
+}
+
+
+.submenu a:hover
+{
+    text-decoration: underline;
+}
+
+.submenu a.actualsub
+{
+    text-decoration: underline;
+    /*color: #3A2000;*/
+    color:#604040;
+}
+
+
+
