Modificación y Ampliación para el soporte de registro y todo el manejo de logueo del usuario se toma la aplicación http://code.google.com/p/django-registration/ para la interfaz de registro el manejo de usuarios
git-svn-id: https://svn.ghost.webhop.org:8443@35 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostserver/ghost/templates/main_template.html
+++ b/trunk/src/ghostserver/ghost/templates/main_template.html
@@ -53,6 +53,11 @@ window.attachEvent("onload", correctPNG);
         <div style="position:relative; z-index:1; width: 15em; float:left; margin-top:-2em; margin-right:-30em;margin-left:3em;"><img src="{{ MEDIA_URL|safe }}media/logo.png"></div>
           <h1>Ghost Garbage</h1>
           <h2>by Lodur and Woakas</h2>
+          <div class="subheader" >
+            {% if user.is_authenticated %}
+             <a href="{% url user_settings %}" title="{{ user.username }}">{{ user.username }}</a> | <a href="{% url auth_logout %}" class="logout" title="Salir">logout</a>
+            {% endif %}
+          </div>
         </div>
         
         <div id="menu">
