--- a/trunk/src/ghostserver/templates/admin/base_site.html
+++ b/trunk/src/ghostserver/templates/admin/base_site.html
@@ -1,10 +1,10 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'Migtrace Admin' %}{% endblock %}
+{% block title %}{{ title }} | {% trans 'Ghost Garbage Admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Migtrace Admin' %}</h1>
+<h1 id="site-name">{% trans 'Ghost Garbage Admin' %}</h1>
 {% endblock %}
 
 {% block nav-global %}<p>&nbsp;&nbsp;<a href='/'>Welcome Page</a> | <a href='/databrowse'>Databrowse</a></p>{% endblock %}
