Adición y corrección al template para el registration
git-svn-id: https://svn.ghost.webhop.org:8443@36 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/data/static/css/style-ghost.css
+++ b/trunk/data/static/css/style-ghost.css
@@ -78,6 +78,37 @@ select {
     text-decoration: none;
 }
 
+.subheader
+{
+    text-align: right;
+    color: #747474;
+    text-decoration:none;
+}
+
+.subheader a
+{
+    color: #747474;
+    font-weight:bold;
+    text-decoration:none;
+}
+
+
+.subheader a:hover
+{
+    text-decoration: underline;
+}
+
+
+.submenu a{
+    /*font: 0.7em Tahoma, sans-serif;*/
+    font-size: 11px;
+    font-weight:bold;
+    color: #555050;
+    /*color:#604040;*/
+    text-decoration:none;
+}
+
+
 /* Menu */
 
 #menu
