--- a/trunk/src/ghostserver/ghost/templates/index.html
+++ b/trunk/src/ghostserver/ghost/templates/index.html
@@ -16,6 +16,8 @@ Los Servicios Basados en Localización buscan ofrecer un servicio personalizado 
 {{ form }}
 <input type="submit" value="Ingresar">
 </form>
+<a style="font-size: 13px;"  href="{% url registration_register %}"> Crear una cuenta</a><br>
+<a style="font-size: 13px;"  href="{% url auth_password_reset %}"> Olvido su contraseña?</a>
 <br>
 <img  src="/static/media/screenshots/screenshot0.png">
 {% endblock %}
