--- a/trunk/src/ghostserver/templates/registration/registration_form.html
+++ b/trunk/src/ghostserver/templates/registration/registration_form.html
@@ -1,15 +1,17 @@
 {% extends "main_template.html" %}
-{% block primaryContent %}
+{% block primaryContentRight %}
 <form method="post" action="">
-<dl>
-{% for field in form %}
-    <dt>{{ field.label_tag }}</dt>
-    <dd>{{ field }}</dd>
-    {% if field.help_text %}<dd>{{ field.help_text }}</dd>{% endif %}
-    {% if field.errors %}<dd class="myerrors">{{ field.errors }}</dd>{% endif %}
-{% endfor %}
-</dl>
+<table>
+{{ form }}
+</table>
 <input type="submit" />
 </form>
 
 {% endblock %}
+
+{% block secondaryContentLeft %}
+<span style="text-align: center;"><img src="/static/media/logogrup.png"  width="85%" height="85%">
+</span>
+
+{% endblock %}
+
