Adicion y modificación para el template de registration
git-svn-id: https://svn.ghost.webhop.org:8443@54 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostserver/templates/flatpages/index.html
+++ b/trunk/src/ghostserver/templates/flatpages/index.html
@@ -11,7 +11,7 @@ Los Servicios Basados en Localización buscan ofrecer un servicio personalizado 
 </p>
 {% endblock %}
 {% block secondaryContentRight %}
-<form method="post">
+<form method="post" action="{% url login_entry %}">
 
 <tr><th><label for="id_usuario">Usuario:</label></th><td><input id="id_usuario" type="text" name="usuario" maxlength="20" /></td></tr>
 
