--- a/trunk/src/ghostserver/templates/registration/logout.html
+++ b/trunk/src/ghostserver/templates/registration/logout.html
@@ -1,5 +1,13 @@
 {% extends "main_template.html" %}
-{% block primaryContent %}
-Gracias por estar en el sistema
+{% block primaryContentRight %}
+<h2>Salida</h2>
+<p>Gracias por Salir esperamos que vuelva pronto.</p>
 
 {% endblock %}
+
+{% block secondaryContentLeft %}
+<span style="text-align: center;"><img src="/static/media/logogrup.png"  width="85%" height="85%">
+</span>
+
+{% endblock %}
+
