--- a/trunk/src/ghostserver/templates/registration/password_change_form.html
+++ b/trunk/src/ghostserver/templates/registration/password_change_form.html
@@ -1,23 +1,8 @@
-{% extends "main_template.html" %}
-{% block primaryContent %}
+{% extends "registration/registration_template.html" %}
 {% load i18n %}
 
-{% block content %}
-
-<h1>{% trans 'Password change' %}</h1>
-
-<p>{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-<form action="" method="post">
-<table>
-{{ form }}
-<tr><td colspan="2"><input type="submit" value="{% trans 'Change my password' %}" /></td></tr>
-</table>
-</form>
-
-{% endblock %}
+{% block nameRegistration %}{% trans 'Password change' %}{% endblock %}
+{% block descriptionRegistration %}{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}{% endblock %}
+{% block valueRegistration %}{% trans 'Change my password' %}{% endblock %}
 
 
-
-
-{% endblock %}
