Adición y configuración sobre los templates para el registro
git-svn-id: https://svn.ghost.webhop.org:8443@56 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostserver/templates/registration/password_change_form.html
+++ b/trunk/src/ghostserver/templates/registration/password_change_form.html
@@ -1,8 +1,10 @@
 {% extends "registration/registration_template.html" %}
 {% load i18n %}
 
+{% block title %}{% trans 'Password change' %}{% endblock %}
 {% block nameRegistration %}{% trans 'Password change' %}{% endblock %}
 {% block descriptionRegistration %}{% trans "Please enter your old password, for security's sake, and then enter your new password twice so we can verify you typed it in correctly." %}{% endblock %}
 {% block valueRegistration %}{% trans 'Change my password' %}{% endblock %}
+
 
 
