--- a/trunk/src/ghostserver/templates/registration/password_reset_form.html
+++ b/trunk/src/ghostserver/templates/registration/password_reset_form.html
@@ -1,6 +1,8 @@
 {% extends "registration/registration_template.html" %}
 {% load i18n %}
 
+{% block title %}{% trans "Password reset" %}{% endblock %}
+
 {% block nameRegistration %}{% trans "Password reset" %}{% endblock %}
 {% block descriptionRegistration %}{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}{% endblock %}
 {% block valueRegistration %}{% trans 'Reset my password' %}{% endblock %}
