--- a/trunk/src/ghostserver/templates/registration/registration_complete.html
+++ b/trunk/src/ghostserver/templates/registration/registration_complete.html
@@ -1,5 +1,8 @@
-{% extends "main_template.html" %}
-{% block primaryContent %}
-<h2>Registration Complete</h2><br />
+{% extends "registration/registration_template.html" %}
+{% load i18n %}
 
+{% block nameRegistration %}Registro Completo{% endblock %}
+{% block descriptionRegistration %}Gracias por registrarse por favor verifique su correo para seguir las instrucciones y terminar el registro.{% endblock %}
+
+{% block formRegistration %}
 {% endblock %}
