Adición y modificación del login y la vista de user
git-svn-id: https://svn.ghost.webhop.org:8443@58 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostserver/templates/registration/login.html
+++ b/trunk/src/ghostserver/templates/registration/login.html
@@ -3,7 +3,7 @@
 
 {% block nameRegistration %}Entrar:{% endblock %}
 {% block descriptionRegistration %}Ingrese su nombre de usuario y contraseña:{% endblock %}
-{% block valueRegistration %}{% trans 'Change my password' %}{% endblock %}
+{% block valueRegistration %}Ingresar{% endblock %}
 
 {% block otrosRegistration %}
 <a style="font-size: 14px;"  href="{% url registration_register %}"> Crear una cuenta</a><br>
