--- a/trunk/src/ghostserver/templates/flatpages/index.html
+++ b/trunk/src/ghostserver/templates/flatpages/index.html
@@ -11,15 +11,20 @@ Los Servicios Basados en Localización buscan ofrecer un servicio personalizado 
 </p>
 {% endblock %}
 {% block secondaryContentRight %}
-<form method="post" action="{% url login_entry %}">
+{% if not user.is_authenticated %}
+<form method="post" action="{% url auth_login %}">
 
-<tr><th><label for="id_usuario">Usuario:</label></th><td><input id="id_usuario" type="text" name="usuario" maxlength="20" /></td></tr>
+<tr><th><label for="id_username">Usuario:</label></th><td><input id="id_username" type="text" name="username" maxlength="20" /></td></tr>
 
-<tr><th><label for="id_clave">Clave:</label></th><td><input id="id_clave" type="password" name="clave" maxlength="20" /></td></tr>
-<input type="submit" value="Ingresar">
+<tr><th><label for="id_password">Clave:</label></th><td><input id="id_password" type="password" name="password" maxlength="20" /></td></tr>
+<tr><td colspan="2" style="text-align: right;"><input type="submit" value="Ingresar"/></td></tr>
+
 </form>
 <a style="font-size: 13px;"  href="{% url registration_register %}"> Crear una cuenta</a><br>
 <a style="font-size: 13px;"  href="{% url auth_password_reset %}"> Olvido su contraseña?</a>
 <br>
+
+{% endif %}
+
 <img  src="/static/media/screenshots/screenshot0.png">
 {% endblock %}
