--- a/trunk/src/ghostserver/ghost/templates/error.html
+++ b/trunk/src/ghostserver/ghost/templates/error.html
@@ -1,20 +1,14 @@
 {% extends "main_template.html" %}
+
 {% block primaryContentRight %}
-<div>
-<h2>Login:</h2>
+<h2>No existe la cuenta</h2>
+<p>Esta cuenta no existe, puede ser que ya esté vencida por favor vaya a: <a href="{% url registration_register %}">Crear Cuenta</a></p>
 
-<form method="post">
-<table>
-{{ form }}
-<tr><td colspan="2"><input type="submit" value="Ingresar">
-</table>
-</form>
-</div>
 {% endblock %}
-
 
 {% block secondaryContentLeft %}
 <span style="text-align: center;"><img src="/static/media/logogrup.png"  width="85%" height="85%">
 </span>
 
 {% endblock %}
+
