--- a/trunk/src/ghostserver/templates/main_template.html
+++ b/trunk/src/ghostserver/templates/main_template.html
@@ -9,6 +9,9 @@
     {% block css %}
     <link rel="stylesheet" href="{{ MEDIA_URL|safe }}css/style-ghost.css" type="text/css" />
     {% endblock %}
+
+    {% block js %}
+    {% endblock %}
     <!--[if lt IE 7]>
 <script language="JavaScript">
 function correctPNG() // correctly handle PNG transparency in Win IE 5.5 & 6.
