Modificación para el KML y las imágenes que se visualizarán.
git-svn-id: https://svn.ghost.webhop.org:8443@100 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/src/ghostserver/garbage/templates/kml.xml
+++ b/trunk/src/ghostserver/garbage/templates/kml.xml
@@ -11,9 +11,10 @@
   </Style>{% endfor %}{% endblock %}
 {% block placemarks %}{% for place in places %}
   <Placemark>
-    <name>{% if place.name %}{{ place.name }}{% else %}{{ place }}{% endif %}</name>
-    <description>{% if place.description %}{{ place.description }}{% else %}{{ place }}{% endif %}</description>
-    {{ place.kml|safe }}
+    <styleUrl>#{{ place.style }}Icon</styleUrl>
+    <name>{{ place.nombre }}</name>
+    <description>{{ place.descripcion }}</description>
+    {{ place.geo.kml|safe }}
   </Placemark>{% endfor %}{% endblock %}
 </Document>
 </kml>
