Adicion de mapas y icons para el mapa y los diferentes servicios
git-svn-id: https://svn.ghost.webhop.org:8443@109 7a9112b4-9480-4b6a-83bd-0f5d1dd4322e

--- a/trunk/data/static/css/style-ghost.css
+++ b/trunk/data/static/css/style-ghost.css
@@ -357,8 +357,15 @@ select {
 
 
 
-#map {
+.smallmap {
        width: 300px;
+       height: 300px;
+       border: 1px solid black;
+       }
+
+
+.bigmap {
+       width: 700px;
        height: 300px;
        border: 1px solid black;
        }
